# my_bot

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
bot/: __init__.py  audio_pipeline.py  config.py  db.py  document_pipeline.py  handlers.py  keyboards.py  main.py  openrouter_client.py  prompting.py  router_logic.py
docs/: architecture.md  deployment_railway.md  routing.md
