[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-openrouter-agent"
version = "0.1.0"
description = "Personal Telegram bot agent powered by OpenRouter"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.13.1",
    "asyncpg>=0.29.0",
    "httpx>=0.27.2",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "pypdf>=4.0.0",
]

[tool.setuptools]
packages = ["bot"]
